cartographer/supply-chain/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cartographer-ingress
  namespace: netic-gitops-system
spec:
  podSelector:
    matchLabels:
      app: source-controller
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cartographer-build
          podSelector: {}
      ports:
        - port: http
          protocol: TCP
